# mobi-market

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_auto_20230717_0055.py  0003_auto_20230723_0428.py  0004_auto_20230723_0431.py  0005_auto_20230723_0537.py
users/: admin.py  custom_funcs.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20230716_2308.py  0003_alter_user_is_active.py  0004_alter_useridentifier_options.py
users/phone_verification_api/: serializers.py  views.py
